# lms-system

./: .env.example  .gitignore  Caddyfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  reset_pass.py
lms-BE/: .env.dev.example  .env.example  .env.prod.example  Dockerfile  README.md  alembic.ini  check_data.py  check_school_cols.py  create_admin.py  docker-compose.yml  fix_alembic.py  pyproject.toml  requirements.txt  test_db.py  test_file_record.py  test_get_submissions.py  test_teacher_submissions.py
lms-BE/alembic/: README  env.py
lms-BE/alembic/versions/: 021dab782c36_add_phase_6_tables.py  06e62c2d30d8_add_event_key_to_notifications.py  07ad11f98eb6_add_teacher_feedback.py  180818ee4335_add_student_answer_options_table.py  1a458e7abbc3_add_course_id_to_activity_log.py  1f1bc34cc907_update_assignment_reference_materials_.py  237b1cccbf17_add_reference_material_columns_to_.py  2610063eda9e_add_file_records_table.py  42853ae5ee0e_add_multi_tenancy_school_isolation_final.py  579436368d5b_add_principal_to_signup_roles.py  5e944a86b27f_add_refresh_tokens_table.py  674e141238dc_add_school_id_to_password_change_.py  80adde15b397_add_signup_requests_table.py  9d1731e428c0_add_course_discussion_tables.py  a1b2ee1033bf_add_description_to_assignments.py  afc46a6406dc_fix_enum_types.py  cb82c48ca97d_add_password_change_requests_table.py  dbc3c06f7edd_initial_lms_schema.py
lms-BE/app/: main.py
lms-BE/app/core/: cleanup_tasks.py  config.py  database.py  db_base.py  exceptions.py  seed.py  (+6 more)
lms-BE/docs/: ai_integration.md  storage_guide.md
(+312 files in other folders)
